--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.animation": "9.1.3",
     "com.unity.2d.aseprite": "1.1.6",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.10.2",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.ide.rider": "3.0.28",
